flecs_ecs/tests/compile_fail/query_not_send.stderr
error[E0277]: `NonNull<ecs_query_t>` cannot be sent between threads safely
  --> tests/compile_fail/query_not_send.rs:17:24
   |
17 |       std::thread::spawn(move || {
   |       ------------------ ^------
   |       |                  |
   |  _____|__________________within this `{closure@$DIR/tests/compile_fail/query_not_send.rs:17:24: 17:31}`
   | |     |
   | |     required by a bound introduced by this call
18 | |         query.each(|pos| {
19 | |             let _ = pos.x;
20 | |         });
21 | |     });
   | |_____^ `NonNull<ecs_query_t>` cannot be sent between threads safely
   |
   = help: within `{closure@$DIR/tests/compile_fail/query_not_send.rs:17:24: 17:31}`, the trait `Send` is not implemented for `NonNull<ecs_query_t>`
note: required because it appears within the type `flecs_ecs::core::Query<&Position>`
  --> src/core/query.rs
   |
   | pub struct Query<T>
   |            ^^^^^
note: required because it's used within this closure
  --> tests/compile_fail/query_not_send.rs:17:24
   |
17 |     std::thread::spawn(move || {
   |                        ^^^^^^^
note: required by a bound in `spawn`
  --> $RUST/std/src/thread/functions.rs
   |
   | pub fn spawn<F, T>(f: F) -> JoinHandle<T>
   |        ----- required by a bound in this function
...
   |     F: Send + 'static,
   |        ^^^^ required by this bound in `spawn`

error[E0277]: `NonNull<world_ctx::WorldCtx>` cannot be sent between threads safely
  --> tests/compile_fail/query_not_send.rs:17:24
   |
17 |       std::thread::spawn(move || {
   |       ------------------ ^------
   |       |                  |
   |  _____|__________________within this `{closure@$DIR/tests/compile_fail/query_not_send.rs:17:24: 17:31}`
   | |     |
   | |     required by a bound introduced by this call
18 | |         query.each(|pos| {
19 | |             let _ = pos.x;
20 | |         });
21 | |     });
   | |_____^ `NonNull<world_ctx::WorldCtx>` cannot be sent between threads safely
   |
   = help: within `{closure@$DIR/tests/compile_fail/query_not_send.rs:17:24: 17:31}`, the trait `Send` is not implemented for `NonNull<world_ctx::WorldCtx>`
note: required because it appears within the type `flecs_ecs::core::Query<&Position>`
  --> src/core/query.rs
   |
   | pub struct Query<T>
   |            ^^^^^
note: required because it's used within this closure
  --> tests/compile_fail/query_not_send.rs:17:24
   |
17 |     std::thread::spawn(move || {
   |                        ^^^^^^^
note: required by a bound in `spawn`
  --> $RUST/std/src/thread/functions.rs
   |
   | pub fn spawn<F, T>(f: F) -> JoinHandle<T>
   |        ----- required by a bound in this function
...
   |     F: Send + 'static,
   |        ^^^^ required by this bound in `spawn`
